--- a/src/scripts/src/support_files/tasks.json
+++ b/src/scripts/src/support_files/tasks.json
@@ -1,1 +1,1 @@
-{"1": [], "2": ["fix dates with matt"], "3": [], "4": ["sequencing ancestry", "laundry", "go pro video recovery"]}
+{"1": ["test the short bayes workflow"], "2": ["fix dates with matt"], "3": [], "4": ["sequencing ancestry", "laundry", "go pro video recovery"]}
